TP Attachment added.

--- a/HiDoctorApp/Views/TP/TPCalendar.storyboard
+++ b/HiDoctorApp/Views/TP/TPCalendar.storyboard
@@ -744,7 +744,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="895"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PfM-xv-oeQ">
+                            <view hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PfM-xv-oeQ">
                                 <rect key="frame" x="10" y="332.5" width="300" height="230"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Planning for 12-FEB " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qsZ-F8-Jgx">
